--- a/BazaaRU/FrontEndServer/src/Components/Search/SearchBar.css
+++ b/BazaaRU/FrontEndServer/src/Components/Search/SearchBar.css
@@ -1,6 +1,6 @@
 .app {
     font-family: sans-serif;
-    display: flex;
+    display: inline;
     align-items: center;
     justify-content: center;
     flex-direction: row;
@@ -48,8 +48,8 @@ input[type="submit"]:hover {
   
   
 .input-container {
-    display: flex;
-    flex-direction: column;
+    display: inline;
+    flex-direction: row;
     gap: 10px;
     margin: 15px;
 }
