--- a/BazaaRU/FrontEndServer/src/Pages/Home.css
+++ b/BazaaRU/FrontEndServer/src/Pages/Home.css
@@ -10,3 +10,13 @@
   align-items: center;
   justify-content: center;
 }
+
+.Contact-link{
+  margin-top: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  color: #0e85a7;
+}
