--- a/BazaaRU/FrontEndServer/src/Pages/App.css
+++ b/BazaaRU/FrontEndServer/src/Pages/App.css
@@ -1,24 +1,77 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 30vmin;
-  pointer-events: none;
-}
-
-
-.App-header {
-  background-color: #282c34;
-  min-height: 50vh;
+.App_LoginPage {
+  margin: 0;
+  padding: 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(20px + 2vmin);
-  color: white;
+  box-sizing: border-box;
+  text-align: center;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  gap: 0px;
+}
+
+body {
+  min-height: 100vh;
+  background: #030a13;
+}
+
+.bubbles_container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.logo {
+  scale: 0.7;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  top: -180px;
+}
+
+.App_LoginPage LoginForm {
+  position:absolute;
+  top: -500px;
+}
+
+.bubbles {
+  position: relative;
+  display: flex;
+}
+
+.bubbles span {
+  z-index: -100;
+  position: relative;
+  width: 30px;
+  height: 30px;
+  background: #e93810;
+  margin: 0 4px;
+  /*border-radius: 50%;*/
+  box-shadow: 0 0 0 10px #e9381044, 0 0 50px #e93810, 0 0 100px #e93810;
+  animation: animate 15s linear infinite;
+  animation-duration: calc(500s/var(--t));
+  /*animation:spin 4s linear infinite;*/
+}
+
+.bubbles span:nth-child(even) {
+  background: #d2d2d2;
+  box-shadow: 0 0 0 10px #a0a0a0e4, 0 0 50px #d2d2d2, 0 0 100px #d2d2d2;
 }
 
 .Registration-link {
   color: #0e85a7;
+  position: relative;
+  top: -300px;
 }
+
+@keyframes animate {
+  0% {
+      transform: translateY(100vh) scale(0)
+  }
+  100% {
+      transform: translateY(-10vh) scale(0.6) rotate(360deg);
+  }
+}
+
+
