--- a/BazaaRU/FrontEndServer/src/Components/Post/Post.css
+++ b/BazaaRU/FrontEndServer/src/Components/Post/Post.css
@@ -1,6 +1,8 @@
-img {
-    height: 100px;
-    width: 100px;
+.app_post img {
+    display: block;
+    margin: 0 auto;
+    height: 400px;
+    width: 400px;
 }
 
 li {
