--- a/BazaaRU/FrontEndServer/src/Components/Accounts/AC.css
+++ b/BazaaRU/FrontEndServer/src/Components/Accounts/AC.css
@@ -1,6 +1,16 @@
-img {
+/*img {
     height: 100px;
     width: 100px;
+}
+*/
+
+.Account {
+    color:aliceblue;
+    background-color: red;
+    height: 100px;
+    width: 400px;
+    position: relative;
+    display: block;
 }
 
 li {
