--- a/BazaaRU/FrontEndServer/src/Components/Accounts/AC.css
+++ b/BazaaRU/FrontEndServer/src/Components/Accounts/AC.css
@@ -11,6 +11,10 @@
     width: 400px;
     position: relative;
     display: block;
+    margin: 0 auto;
+    border: 2px solid blue;
+    border-radius: 5px;
+    margin-top: 50px;
 }
 
 li {
