--- a/BazaaRU/FrontEndServer/src/Pages/UpdateBalance.css
+++ b/BazaaRU/FrontEndServer/src/Pages/UpdateBalance.css
@@ -11,7 +11,7 @@
 }
 .balanceUpdate h2 {
   font-size: 20px;
-  color: #000000;
+  color: aliceblue;
   margin-bottom: 30px;
 }
 .balanceUpdate input{
